--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Netflix Clone</title>
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
   </body>
 </html>
